--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cron": "^1.1.1",
     "html-entities": "^1.2.0",
+    "mongodb": "^2.2.11",
     "node-telegram-bot-api": "^0.24.0",
     "request": "^2.78.0"
   }
